--- a/onlineTest/webApp/static/header/header.html
+++ b/onlineTest/webApp/static/header/header.html
@@ -1,6 +1,6 @@
 <header class="header-basic">
 	<div class="header-limiter">
-		<h1><a href="#">Company<span>logo</span></a></h1>
+		<h1><a href="/">Company<span>logo</span></a></h1>
 		<nav>
 			<a href="#" class="selected">Home</a>
 			<a href="#">Blog</a>
